tests/invalid/loops/out_of_scope.rs
/*
fail: 1
*/

main(): i32 {

    while (1) {
        a: i64 = 2;
    }

    return a;
}